@@ -1,3 +1,13 @@
+2003-06-11  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* libpp/op_header.cpp:
+	* libpp/profile.cpp:
+	* libpp/profile_spec.cpp:
+	* libpp/symbol_sort.cpp:
+	* libregex/op_regex.cpp:
+	* libutil++/op_bfd.cpp: use exception rather exit(EXIT_FAILURE) in
+	library code
+
 2003-06-11  John Levon  <levon@movementarian.org>
 
 	* daemon/opd_image.c: future-proof the code handlers
